--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ terraform.tfvars
 terraform.tfstate
 .*pem
 .terraform.tfstate
-.terraform.tfstate.backup.terraform.tfstate
+.terraform.tfstate.backup
